feat(WIP): Adiciona melhorias - Estrutura aggregate de Pet e PetPhoto - Adiciona camada de repository - Adiciona camada de service - Adiciona Dependency Inversion no Repository - Adiciona Dockerfile
