# src/main/java/com/murilohenzo/atom/petapi/adapters/rest/PetsApiDelegateImpl.java
@@ -1,33 +1,31 @@
 package com.murilohenzo.atom.petapi.adapters.rest;
 
 import com.murilohenzo.atom.petapi.domain.mapper.PetMapper;
+import com.murilohenzo.atom.petapi.domain.service.PetPhotoService;
 import com.murilohenzo.atom.petapi.domain.service.PetService;
 import com.murilohenzo.atom.petapi.presentation.PetApiDelegate;
-import com.murilohenzo.atom.petapi.presentation.representation.ApiResponseRepresentation;
-import com.murilohenzo.atom.petapi.presentation.representation.PetRepresentation;
+import com.murilohenzo.atom.petapi.presentation.representation.PetPhotoResponseRepresentation;
+import com.murilohenzo.atom.petapi.presentation.representation.PetRequestRepresentation;
+import com.murilohenzo.atom.petapi.presentation.representation.PetResponseRepresentation;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.time.OffsetDateTime;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 public class PetsApiDelegateImpl implements PetApiDelegate {
 
     private final PetService petService;
+    private final PetPhotoService petPhotoService;
     private final PetMapper petMapper;
 
     @Override
-    public Optional<NativeWebRequest> getRequest() {
-        return PetApiDelegate.super.getRequest();
-    }
-
-    @Override
-    public ResponseEntity<PetRepresentation> addPet(PetRepresentation petRepresentation) {
-        var pet = petMapper.toRepresentation(this.petService.create(petMapper.toEntity(petRepresentation)));
+    public ResponseEntity<PetResponseRepresentation> addPet(PetRequestRepresentation petRepresentation) {
+        var pet = petMapper.toRepresentation(this.petService.create(petMapper.toEntityPet(petRepresentation)));
         return ResponseEntity.status(HttpStatus.CREATED).body(pet);
     }
 
@@ -37,17 +35,20 @@ public class PetsApiDelegateImpl implements PetApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<PetRepresentation>> findPetsByStatus(String status) {
-        return PetApiDelegate.super.findPetsByStatus(status);
+    public ResponseEntity<List<PetResponseRepresentation>> findPetsByStatus(String status) {
+        var pets = petService.findPetsByStatus(petMapper.toStatus(status))
+                .stream().map(petMapper::toRepresentation).collect(Collectors.toList());
+        return ResponseEntity.ok(pets);
     }
 
     @Override
-    public ResponseEntity<PetRepresentation> getPetById(Long petId) {
-        return PetApiDelegate.super.getPetById(petId);
+    public ResponseEntity<PetResponseRepresentation> getPetById(Long petId) {
+        var pet = petService.findById(petId);
+        return pet.map(value -> ResponseEntity.ok(petMapper.toRepresentation(value))).orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
     @Override
-    public ResponseEntity<PetRepresentation> updatePet(PetRepresentation petRepresentation) {
+    public ResponseEntity<PetResponseRepresentation> updatePet(PetResponseRepresentation petRepresentation) {
         return PetApiDelegate.super.updatePet(petRepresentation);
     }
 
@@ -57,7 +58,25 @@ public class PetsApiDelegateImpl implements PetApiDelegate {
     }
 
     @Override
-    public ResponseEntity<ApiResponseRepresentation> uploadFile(Long petId, String additionalMetadata, MultipartFile file) {
-        return PetApiDelegate.super.uploadFile(petId, additionalMetadata, file);
+    public ResponseEntity<List<PetPhotoResponseRepresentation>> uploadFile(Long petId, List<MultipartFile> file) {
+        var pet = petService.findById(petId);
+
+        if (pet.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
+        }
+
+        var photos = petPhotoService.create(pet.get(), file);
+
+        // TODO: Verificar o createdAt e adicionar datelibrary dentro do openapi generator
+
+        var photosRepresentation = photos.stream().map(p -> {
+            PetPhotoResponseRepresentation petPhotoResponseRepresentation = new PetPhotoResponseRepresentation();
+            petPhotoResponseRepresentation.setId(p.getId());
+            petPhotoResponseRepresentation.setPetId(p.getPet().getId());
+            petPhotoResponseRepresentation.setCreatedAt(OffsetDateTime.now());
+            return petPhotoResponseRepresentation;
+        }).toList();
+
+        return ResponseEntity.ok().body(photosRepresentation);
     }
 }
